--- a/src/app/login/LoginForm.css
+++ b/src/app/login/LoginForm.css
@@ -93,3 +93,11 @@
 .register-link p a:hover {
     text-decoration: underline;
 }
+
+.background {
+    background-image: url("./assets/images/tornavias.png");
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+    width: 100%;
+}
