--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400,600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400,600;700&display=swap");
 
 * {
   margin: 0;
@@ -7,7 +7,7 @@
 }
 
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   display: flex;
@@ -17,7 +17,32 @@ body {
   background: #fff;
 }
 
+header {
+  background-color: seagreen;
+  padding: 10px;
+  width: 420px;
+  margin: 0 auto;
+}
+
+.header-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+footer {
+  background-color: seagreen;
+  padding: 10px;
+}
+
+.logo-CyT {
+  width: 400px;
+  height: auto;
+  display: block;
+  margin: 0 auto;
+}
+
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
