--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,9 @@
 #root {
-  max-width: 1280px;
+  ;
+  width: 100vw;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
+  font-size: 10px;
 }
 
 .logo {
@@ -16,6 +17,11 @@
 }
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
+}
+h1{
+    font-size: 1rem;
+    margin: 0;
+    padding: 0;
 }
 
 @keyframes logo-spin {
