--- a/src/components/pages/main/map/map.css
+++ b/src/components/pages/main/map/map.css
@@ -1,6 +1,26 @@
+.map-page {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    padding: 2rem;
+    min-height: 90vh;
+    gap: 2rem;
+
+}
+.map-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.svg-container{
+    width: 100%;
+    height: 100%;
+    display: block;
+}
+
 /* BuildingMap.css */
 path {
-    fill: #ddd;
+    /* fill: #ddd; */
     cursor: pointer;
 }
 
@@ -11,3 +31,4 @@ path:hover {
 .selected {
     fill: #ff5722;
 }
+
