--- a/src/components/pages/main/map/map.css
+++ b/src/components/pages/main/map/map.css
@@ -25,23 +25,21 @@ svg text {
     cursor: pointer;
 }
 
+svg text{
+    font-family: inherit; /* Usa la fuente heredada */
+    fill: #213547; /* Color del texto para mayor consistencia */
+}
+
 .classRoom path:hover {
     fill: #aaa;
 }
-
-/* .selected {
-    fill: #ff5722;
-} */
 
 .classes-container{
     display: flex;
     flex-direction: column;
     gap: 1rem;
 }
-/* .classRoom.selected{
-    transform-origin: center center;
-    transform: scale(1.1);
-} */
+
 .classRoom.selected text{
     font-size: 2rem;
 }
