--- a/src/components/common/Nav/nav.css
+++ b/src/components/common/Nav/nav.css
@@ -3,6 +3,8 @@
     transition: transform 0.3s ease-in-out;
     border: none;
     height: 100%;
+    /* Deshabilitar selección con el mouse */
+    user-select: none;
 }
 .footer-nav-bar button svg{
     transition: transform 0.3s ease-in-out;
